--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Advanced Stock Screener Requirements
 # Core data manipulation and analysis
-pandas>=1.5.0
-numpy>=1.21.0
+pandas
+numpy
 
 # Web framework for the app
-streamlit>=1.28.0
+streamlit
 
 # HTTP requests for API calls
-requests>=2.28.0
+requests
 
 # Date and time handling (built-in, but explicit for clarity)
 # datetime - built-in module
@@ -19,12 +19,12 @@ requests>=2.28.0
 # io - built-in module
 
 # Optional: Enhanced data visualization (if you want to add charts later)
-# plotly>=5.0.0
-# matplotlib>=3.5.0
+# plotly
+# matplotlib
 
 # Optional: Performance optimization
-# numba>=0.56.0
+# numba
 
 # Optional: Additional technical analysis library
-# ta>=0.10.0
-# TA-Lib>=0.4.0
+# ta
+# TA-Lib
